2006-07-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* acinclude.m4: do define EBCDIC to be 0, pcre wants it this way.
	* gtksourceview/gtksourcecontextengine.c: 
	(gtk_source_context_engine_attach_buffer): do not use enable_highlight
	when detaching engine, just delete the tags.
	(update_syntax): do not collect contexts from erased segments here, it's 
	slow.
	* gtksourceview/libegg/regex/eggregex.c: 
	(NEXT_CHAR): use the argument.
	(egg_regex_copy): made size be of type gulong, so pcre_fullinfo won't crash 
	if sizeof(int) != sizeof(unsigned long).

2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c: do not strip regular
	expressions patterns, to allow having leading/trailing whitespace
	there (e.g. " ").
	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/html.lang:
	* gtksourceview/language-specs/latex.lang:
	* gtksourceview/language-specs/xml.lang: added "extended" attribute
	or stripped patterns as appropriate.

2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/Makefile.am: reverted last commit, it was made by 
	mistake.

2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/pcre/AUTHORS:
	* gtksourceview/libegg/regex/pcre/ChangeLog:
	* gtksourceview/libegg/regex/pcre/COPYING:
	* gtksourceview/libegg/regex/pcre/LICENSE:
	* gtksourceview/libegg/regex/pcre/NEWS:
	* gtksourceview/libegg/regex/pcre/README:
	added pcre documentation files.

	* gtksourceview/libegg/regex/pcre/pcre.h:
	added bunch of #define's to prefix all exported pcre symbols
	with _egg_regex_.
	* gtksourceview/libegg/regex/pcre/pcre_chartables.c:
	#include "pcre_internal.h" to pull those #define's.

2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: fixed bug with tags hash 
	table - it g_slist_free'd values, and led to funny memory corruption.
	* gtksourceview/gtksourcelanguage-parser-2.c: (replace_delimiter): 
	fixed a memory leak.